<resources>
    <string name="app_name">CarSystem</string>

    <string name="car_text">Car Options</string>
    <string name="window_text">Window Options</string>
    <string name="wiper_text">Windshield Wiper Options</string>

    <string name="back_text">Back</string>
    <string name="home_text">Home</string>

    <string name="wiper_on">Windshield Wiper On</string>
    <string name="wiper_off">Windshield Wiper Off</string>

    <string name="wiper_mode">Switch Mode</string>

    <string name="lowToggleOff">Low Beams Off</string>
    <string name="lowToggleOn">Low Beams On</string>
    <string name="highToggleOff">High Beams Off</string>
    <string name="highToggleOn">High Beams On</string>

    <string name="radio_text">Radio Options</string>
    <string name="radio_switch">Modulation</string>
    <string name="radio_am">AM</string>
    <string name="radio_fm">FM</string>
    <string name="channel_down">Channel Down</string>
    <string name="channel_up">Channel Up</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="delete"><![CDATA[<]]></string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_browse">BrowseActivity</string>


</resources>
