<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wiper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ser401.carsystem.WiperActivity">

    <TextView
        android:text="@string/wiper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <Button
        android:text="@string/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_marginBottom="99dp"
        android:id="@+id/wiper_home"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/wiper_back"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:id="@+id/toggle_wipers"
        android:textOff="@string/wiper_off"
        android:textOn="@string/wiper_on"
        android:layout_below="@+id/wiper_back"
        android:layout_toRightOf="@+id/wiper_back"
        android:layout_toEndOf="@+id/wiper_back"
        android:layout_above="@+id/wiper_home" />

    <Button
        android:text="@string/wiper_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchBtn"
        android:layout_alignBottom="@+id/toggle_wipers"
        android:layout_toRightOf="@+id/toggle_wipers"
        android:layout_toEndOf="@+id/toggle_wipers"
        android:layout_marginLeft="191dp"
        android:layout_marginStart="191dp"
        android:layout_alignTop="@+id/toggle_wipers" />
</RelativeLayout>
