<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_radio2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ser401.carsystem.RadioActivity2">

    <TextView
        android:text="@string/radio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/radio_view2"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/radio_back2"
        android:layout_alignEnd="@+id/radio_back2"
        android:layout_marginBottom="101dp"
        android:id="@+id/radio_home2"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="71dp"
        android:id="@+id/radio_back2"
        android:textStyle="normal|bold"
        android:layout_below="@+id/radio_view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/channel_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/radio_back2"
        android:layout_toLeftOf="@+id/radio_view2"
        android:layout_toStartOf="@+id/radio_view2"
        android:id="@+id/channel_up" />

    <Button
        android:text="@string/volume_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/volume_up"
        android:layout_alignBaseline="@+id/channel_up"
        android:layout_alignBottom="@+id/channel_up"
        android:layout_toRightOf="@+id/radio_view2"
        android:layout_toEndOf="@+id/radio_view2" />

    <Button
        android:text="@string/channel_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/channel_down"
        android:layout_alignBaseline="@+id/radio_home2"
        android:layout_alignBottom="@+id/radio_home2"
        android:layout_toRightOf="@+id/radio_home2"
        android:layout_toEndOf="@+id/radio_home2"
        android:layout_marginLeft="84dp"
        android:layout_marginStart="84dp" />

    <Button
        android:text="@string/volume_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/volume_down"
        android:layout_alignBaseline="@+id/channel_down"
        android:layout_alignBottom="@+id/channel_down"
        android:layout_toRightOf="@+id/channel_down"
        android:layout_toEndOf="@+id/channel_down"
        android:layout_marginLeft="168dp"
        android:layout_marginStart="168dp" />
</RelativeLayout>
