<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_radio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ser401.carsystem.RadioActivity">

    <TextView
        android:text="@string/radio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:id="@+id/radio_text"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="28dp"
        android:id="@+id/radio_back"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_back"
        android:layout_alignRight="@+id/radio_back"
        android:layout_alignEnd="@+id/radio_back"
        android:layout_marginTop="108dp"
        android:id="@+id/radio_home" />

    <Button
        android:text="@string/radio_fm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/amBtn"
        android:layout_toRightOf="@+id/radio_text"
        android:layout_toEndOf="@+id/radio_text"
        android:id="@+id/fmBtn" />

    <Button
        android:text="@string/radio_am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amBtn"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/radio_text"
        android:layout_toStartOf="@+id/radio_text" />
</RelativeLayout>
