<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ser401.carsystem.CarActivity">

    <TextView
        android:text="@string/car_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/car_text"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_home"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/car_back"
        android:layout_alignStart="@+id/car_back"
        android:layout_marginBottom="79dp" />

    <Button
        android:text="@string/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/car_back"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/car_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/window"
        android:id="@+id/windowBtn"
        android:layout_below="@+id/car_text"
        android:layout_alignRight="@+id/car_text"
        android:layout_alignEnd="@+id/car_text"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="34dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/wiper"
        android:layout_marginRight="34dp"
        android:layout_marginEnd="34dp"
        android:id="@+id/wiperBtn"
        android:layout_alignTop="@+id/windowBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/windowBtn" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/toggleLow"
        android:layout_alignLeft="@+id/wiperBtn"
        android:layout_alignStart="@+id/wiperBtn"
        android:id="@+id/toggleHigh"
        android:textOff="@string/highToggleOff"
        android:textOn="@string/highToggleOn"
        android:layout_alignRight="@+id/wiperBtn"
        android:layout_alignEnd="@+id/wiperBtn" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleLow"
        android:textOff="@string/lowToggleOff"
        android:textOn="@string/lowToggleOn"
        android:layout_alignBaseline="@+id/car_home"
        android:layout_alignBottom="@+id/car_home"
        android:layout_alignLeft="@+id/car_text"
        android:layout_alignStart="@+id/car_text"
        android:layout_alignRight="@+id/windowBtn"
        android:layout_alignEnd="@+id/windowBtn" />
</RelativeLayout>
