<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ser401.carsystem.WindowActivity">

    <TextView
        android:text="@string/window_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/window_text"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:text="@string/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/window_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:id="@+id/window_back"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/window_back"
        android:layout_alignEnd="@+id/window_back"
        android:layout_marginBottom="100dp"
        android:id="@+id/window_home" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/up_arrow"
        android:id="@+id/upBtn"
        android:layout_marginLeft="121dp"
        android:layout_marginStart="121dp"
        android:layout_alignTop="@+id/downBtn"
        android:layout_toRightOf="@+id/window_back"
        android:layout_toEndOf="@+id/window_back" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/down_arrow"
        android:id="@+id/downBtn"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/window_text"
        android:layout_toEndOf="@+id/window_text" />

</RelativeLayout>
